--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -1,51 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset=utf-8>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+	<meta charset=utf-8>
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="scripts/script.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="scripts/script.js"></script>
 
-    <title></title>
+	<title></title>
 </head>
 <body>
 
-    <header>
-        <nav class="navbar navbar-default">
-          <div class="container">
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container-fluid">
 
-            <div class="navbar-header">
-                <a class="navbar-brand" href="."><span class="logo">Probione <span class="claim">INDIVIDUAL PROBIOTICS</span></span></a>
+        <div class="navbar-header">
+          <button type="button"  class="navbar-toggle collapsed" data-toggle="collapse" data-target="#menu">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          
+          <a class="navbar-brand" href=""><span class="logo">Probione</span></a>
+
+          <div class="navbar-right">
+            <div class="collapse navbar-collapse menu"  id="menu">
+
+              <ul class="nav navbar-nav text-center nav-page">
+                <li><a href="">Úvod</a></li>
+                <li><a href="">Význam střevní mikroflóry</a></li>
+                <li><a href="">Personalizovaná probiotika</a></li>
+                <li><a href="">Mikrobiomová banka</a></li>
+                <li><a href="">Náš tým</a></li>
+                <li><a href="">Objednat</a></li>
+                <li><a href="">Kontakt</a></li>
+              </ul>
             </div>
-
-
-          </div>
-        </nav>
-
-
-    </header>
-
-
-
-    <section class="hero">
-        <div class="image">
-            
-        </div>
-        <div class="icon">
-            <h2>Analyzujeme až 1000 bakteriálních druhů</h2>
-        </div>
-    </section>
-
-
-    <footer class="page-footer">
-        <div class="container">
-            <ul>
-                <li>Adresa</li>
-                <li>Tel.</li>
-                <li>E-mail</li>
+            <ul class="nav navbar-nav languages">
+                <li><a href="">EN</a></li>
             </ul>
+          </div>
+
+
         </div>
-    </footer>
+
+      </div>
+    </nav>
+  </header>              
+
+
+
+	<section class="hero">
+		<div class="image">
+      <h1>INDIVIDUAL PROBIOTICS CARE</h1>
+      <a class="btn btn-lg btn-primary" href=""><i class="fa fa-angle-right"></i>OBJEDNAT</a>
+		</div>
+		<div class="icon">
+			<h2>Analyzujeme až 1000&nbsp;bakteriálních druhů</h2>
+		</div>
+	</section>
+
+
+	<footer class="page-footer">
+			<div class="container">
+					<ul>
+							<li>Adresa</li>
+							<li>Tel.</li>
+							<li>E-mail</li>
+					</ul>
+			</div>
+	</footer>
 
 </body>
 </html>
