--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -91,6 +91,28 @@
     </div>
   </section>
 
+  <section class="soucasti">
+    <div class="container">
+      <h2>Součást roční kúry</h2>
+
+      <div class="text">
+        <dl>
+        <dt>2&times;</dt><dd>odběrný set a doručení k zákazníkovi</dd>
+        <dt>1&times;</dt><dd>úvodní analýza odebraného vzoru</dd>
+        <dt>1&times;</dt><dd>vytvoření  probiotického pasu - určení které probiotické kultury chybí případně jsou oslabené</dd>
+        <dt>1&times;</dt><dd>kontrolní analýza po 4 měsících používání</dd>
+        <dt>4&times;</dt><dd>výroba probiotik na základě probiotického pasu (90 kusů v každé dávce)</dd>
+        <dt>4&times;</dt><dd>doručení probiotik na adresu zákazníka</dd>
+        </dl>
+
+        <p>Certifikovaný výstup se vstupní i kontrolní analýzy probiotický pas, využitelný pro výrobu probiotik kdykoliv v budoucnu</p>
+      </div>
+
+      <a class="btn btn-lg btn-primary" href=""><i class="fa fa-angle-right"></i>OBJEDNAT</a>
+
+    </div>
+  </section>
+
 
 	<footer class="page-footer">
 			<div class="container">
