--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -113,6 +113,57 @@
     </div>
   </section>
 
+  <section class="lekari">
+    <div class="container">
+      <h2>NÁZORY LÉKAŘŮ</h2>
+
+      <div class="row">
+        <div class="col-md-4">
+          <div class="nazor">
+            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+
+            <h3>NÁZOR LÉKAŘE</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur
+            adipisici elit, sed eiusmod tempor incidunt
+            ut labore et dolore magna aliqua.</p>
+
+            <p><strong>MUDr. Ignác Menděl</strong></p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="nazor">
+            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+
+            <h3>NÁZOR LÉKAŘE</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur
+            adipisici elit, sed eiusmod tempor incidunt
+            ut labore et dolore magna aliqua.</p>
+
+            <p><strong>MUDr. Ignác Menděl</strong></p>
+          </div>
+        </div>
+
+        <div class="col-md-4">
+          <div class="nazor">
+            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+
+            <h3>NÁZOR LÉKAŘE</h3>
+
+            <p>Lorem ipsum dolor sit amet, consectetur
+            adipisici elit, sed eiusmod tempor incidunt
+            ut labore et dolore magna aliqua.</p>
+
+            <p><strong>MUDr. Ignác Menděl</strong></p>
+          </div>
+        </div>
+      </div>        
+
+    </div>
+  </section>
+      
 
 	<footer class="page-footer">
 			<div class="container">
