--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -164,15 +164,21 @@
     </div>
   </section>
       
-
-	<footer class="page-footer">
-			<div class="container">
-					<ul>
-							<li>Adresa</li>
-							<li>Tel.</li>
-							<li>E-mail</li>
-					</ul>
-			</div>
+  <section class="follow">
+    <h3>Sledujte nás na</h3>
+    <a href=""><i class="fa fa-facebook"></i></a>
+    <a href=""><i class="fa fa-youtube-play"></i></a>
+    <a href=""><i class="fa fa-twitter"></i></a>
+  </section>
+  
+  <footer class="page-footer">
+    <div class="container">
+      <ul>
+        <li><i class="fa fa-home"></i> Adresa, 000 00 Mesto</li>
+        <li><i class="fa fa-phone"></i> Tel.: +420 777 777 777</li>
+        <li><i class="fa fa-envelope"></i> E-mail: info@pharmavision.cz</li>
+      </ul>
+    </div>
 	</footer>
 
 </body>
