--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -118,49 +118,51 @@
       <h2>NÁZORY LÉKAŘŮ</h2>
 
       <div class="row">
-        <div class="col-md-4">
-          <div class="nazor">
-            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+        <div class="nazory">
+        
+          <div class="col-sm-4">
+            <div class="nazor">
+              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
 
-            <h3>NÁZOR LÉKAŘE</h3>
+              <h3>NÁZOR LÉKAŘE</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur
-            adipisici elit, sed eiusmod tempor incidunt
-            ut labore et dolore magna aliqua.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur
+              adipisici elit, sed eiusmod tempor incidunt
+              ut labore et dolore magna aliqua.</p>
 
-            <p><strong>MUDr. Ignác Menděl</strong></p>
+              <p><strong>MUDr. Ignác Menděl</strong></p>
+            </div>
           </div>
-        </div>
 
-        <div class="col-md-4">
-          <div class="nazor">
-            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+          <div class="col-sm-4">
+            <div class="nazor">
+              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
 
-            <h3>NÁZOR LÉKAŘE</h3>
+              <h3>NÁZOR LÉKAŘE</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur
-            adipisici elit, sed eiusmod tempor incidunt
-            ut labore et dolore magna aliqua.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur
+              adipisici elit, sed eiusmod tempor incidunt
+              ut labore et dolore magna aliqua.</p>
 
-            <p><strong>MUDr. Ignác Menděl</strong></p>
+              <p><strong>MUDr. Ignác Menděl</strong></p>
+            </div>
           </div>
-        </div>
 
-        <div class="col-md-4">
-          <div class="nazor">
-            <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+          <div class="col-sm-4">
+            <div class="nazor">
+              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
 
-            <h3>NÁZOR LÉKAŘE</h3>
+              <h3>NÁZOR LÉKAŘE</h3>
 
-            <p>Lorem ipsum dolor sit amet, consectetur
-            adipisici elit, sed eiusmod tempor incidunt
-            ut labore et dolore magna aliqua.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur
+              adipisici elit, sed eiusmod tempor incidunt
+              ut labore et dolore magna aliqua.</p>
 
-            <p><strong>MUDr. Ignác Menděl</strong></p>
+              <p><strong>MUDr. Ignác Menděl</strong></p>
+            </div>
           </div>
-        </div>
-      </div>        
-
+        </div>        
+      </div>
     </div>
   </section>
       
