--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -27,15 +27,15 @@
             <div class="collapse navbar-collapse menu"  id="menu">
 
               <ul class="nav navbar-nav text-center nav-page">
-                <li><a href="">Úvod</a></li>
+                <li><a href="">O nás</a></li>
                 <li><a href="">Význam střevní mikroflóry</a></li>
-                <li><a href="">Personalizovaná probiotika</a></li>
-                <li><a href="">Mikrobiomová banka</a></li>
-                <li><a href="">Náš tým</a></li>
-                <li><a href="">Objednat</a></li>
                 <li><a href="">Kontakt</a></li>
+                <li><a href="" class="order">OBJEDNAT</a></li>
+                <li><a href=""><span class="email"><i class="fa fa-envelope"></i> info@probione.com</span></a></li>
               </ul>
+                   
             </div>
+
             <ul class="nav navbar-nav languages">
                 <li><a href="">EN</a></li>
             </ul>
