prejmenovani lekari na reference

--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -170,32 +170,18 @@
     </div>
   </section>
 
-  <section class="lekari">
+  <section class="reference">
     <div class="container">
-      <h2>NÁZORY LÉKAŘŮ</h2>
+      <h2>Zkušenosti našich zákazníků</h2>
 
       <div class="row">
         <div class="nazory">
         
           <div class="col-sm-4">
             <div class="nazor">
-              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
 
-              <h3>NÁZOR LÉKAŘE</h3>
-
-              <p>Lorem ipsum dolor sit amet, consectetur
-              adipisici elit, sed eiusmod tempor incidunt
-              ut labore et dolore magna aliqua.</p>
-
-              <p><strong>MUDr. Ignác Menděl</strong></p>
-            </div>
-          </div>
-
-          <div class="col-sm-4">
-            <div class="nazor">
-              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
-
-              <h3>NÁZOR LÉKAŘE</h3>
+              <h3>ZÁKAZNÍK 1</h3>
 
               <p>Lorem ipsum dolor sit amet, consectetur
               adipisici elit, sed eiusmod tempor incidunt
@@ -207,11 +193,25 @@
 
           <div class="col-sm-4">
             <div class="nazor">
-              <img src="img/lekar.jpg" alt="MUDr. Ignác Menděl">
+              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
 
-              <h3>NÁZOR LÉKAŘE</h3>
+              <h3>ZÁKAZNÍK 2</h3>
 
               <p>Lorem ipsum dolor sit amet, consectetur
+              ut labore et dolore magna aliqua.</p>
+
+              <p><strong>MUDr. Ignác Menděl</strong></p>
+            </div>
+          </div>
+
+          <div class="col-sm-4">
+            <div class="nazor">
+              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
+
+              <h3>ZÁKAZNÍK 3</h3>
+
+              <p>Lorem ipsum dolor sit amet, consectetur
+              adipisici elit, sed eiusmod tempor incidunt
               adipisici elit, sed eiusmod tempor incidunt
               ut labore et dolore magna aliqua.</p>
 
