vyznam strevni mikroflory, aktualizace hero

--- a/WWWROOT/o-nas.htm
+++ b/WWWROOT/o-nas.htm
@@ -87,6 +87,8 @@
       <p>Vaše zdraví je pro nás důležité.</p>
 
       <a class="btn btn-lg btn-primary" href="chci-informace.htm">Chci více informací</a>
+      
+      <img src="img/img-box-front.jpg" class="img-responsive center-block">
 
     </div>
   </section>
