--- a/WWWROOT/vyznam-strevni-mikroflory.htm
+++ b/WWWROOT/vyznam-strevni-mikroflory.htm
@@ -60,10 +60,10 @@
     <div class="container">
      
       <h1>Význam střevní mikroflóry</h1>
-      <p>V našem střevě žije 1014 bakterií, zatímco buněk v lidském
-         těle je 1013. Jinými slovy, v lidském těle je až desetkrát více bakterií než buněk našeho vlastního těla.
-         Celkovou hmotnost 1,5 – 2 kg čisté bakteriální masy tvoří až 500 různých druhů mikroorganizmů.
-         Tyto trilióny bakterií ovlivňují naše zdraví mnohem více, než si umíme představit.</p>
+      <p>V našem střevě žije 10<sup>14</sup> bakterií, zatímco buněk v lidském
+         těle je 10<sup>13</sup>. Jinými slovy, v lidském těle je až desetkrát více bakterií než buněk našeho vlastního těla.
+         Celkovou hmotnost 1,5 – 2 kg čisté bakteriální masy tvoří až 500 různých druhů mikroorganizmů.</p>
+      <p><strong>Tyto trilióny bakterií ovlivňují naše zdraví mnohem více, než si umíme představit.</strong></p>
 
       
       <hr>
