priklad vypsani chyby na formulari

--- a/WWWROOT/chci-informace.htm
+++ b/WWWROOT/chci-informace.htm
@@ -75,9 +75,9 @@
         <div class="formin">
 
           <div class="form-group has-feedback has-error">
-            <input name="jmeno" type="text" class="form-control" placeholder="* Vaše jméno" required data-error="Please enter your password">
+            <input name="jmeno" type="text" class="form-control" placeholder="* Vaše jméno" value="xxx" required data-error="Chyba lorem ipsum dolor">
             <span class="fa form-control-feedback  fa-exclamation-circle fa-lg" aria-hidden="true"></span>
-            <div class="help-block with-errors"></div>
+            <div class="help-block with-errors">Chyba lorem ipsum dolor</div>
 
           </div>
 
