--- a/WWWROOT/index.htm
+++ b/WWWROOT/index.htm
@@ -188,52 +188,36 @@
     <div class="container">
       <h2>Zkušenosti našich zákazníků</h2>
 
-      <div class="row">
-        <div class="nazory">
-        
-          <div class="col-sm-4">
-            <div class="nazor">
-              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
-
-              <h3>ZÁKAZNÍK 1</h3>
-
-              <p>Lorem ipsum dolor sit amet, consectetur
-              adipisici elit, sed eiusmod tempor incidunt
-              ut labore et dolore magna aliqua.</p>
-
-              <p><strong>MUDr. Ignác Menděl</strong></p>
+      <div class="nazory">
+      
+        <div class="nazor">
+          <div class="in">
+            <div class="text">
+              <p>Zkušenost s probiotiky Probione a s prebiotiky Prebiolax. V prosinci loňského roku jsem začala užívat na míru vyrobená probiotika Probione. Dlouhodobě jsem měla problémy s trávením , nafouklé břicho i když jsem jedla málo, nepravidelné vyprazdňování, po jídle těžko v žaludku. Rozbor mé střevní mikroflóry mě příliš nepotěšil, některé bakterie byly hluboko pod normou. Ale aspoň to vysvětlovalo můj diskomfort a věděla jsem, že jsem na správné cestě. Kromě toho vím, že zdravá střeva posilují imunitu. V zásilce s probiotiky byl přibalen i produkt Prebiolax, což je prebiotikum a bylo mi doporučeno užívat jednu lžičku večer.</p>
+              <p>První dva měsíce jsem žádné velké změny nepozorovala, ale dočetla jsem se, že &bdquo;oprava&rdquo; střevní mikroflóry je běh na dlouhou trať a během třetího měsíce užívání probiotik a prebiotik opravdu nastala změna. Břicho je opět normální, chodím pravidelně na toaletu, nemám těžko v žaludku a celkově mám jiný pocit v břiše, což je subjektivní názor, ale jinak to vyjádřit neumím.</p>
+              <p><strong>S produkty jsem velmi spokojená, jsem zvědavá na další rozbor střevní mikroflóry, v dalším půlroce dostanu upravená probiotika pro aktuální stav mých střev. Doporučila jsem svým známým.</strong></p>
             </div>
+            <div class="autor">M.V. Plzeň</div>
           </div>
+        </div>
 
-          <div class="col-sm-4">
-            <div class="nazor">
-              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
+        <hr>
 
-              <h3>ZÁKAZNÍK 2</h3>
-
-              <p>Lorem ipsum dolor sit amet, consectetur
-              ut labore et dolore magna aliqua.</p>
-
-              <p><strong>MUDr. Ignác Menděl</strong></p>
+        <div class="nazor">
+          <div class="in">
+            <div class="text">
+              <p>Jsem už postaršího věku a k zahájení této léčby mně přiměla skutečnost, že jsem v posledních letech opakovaně prodělávala v každém zimním období virózy (někdy i několikrát za měsíc, ačkoliv jsem se dlouhodobě léčila na imunologii a brala léky na zvýšení počtu bílých krvinek, protože hodnoty leukocytů v mém krevním obrazu byly opakovaně pod stanoveným minimem). Prodělávané virózy u mně pravidelně přecházely na záněty průdušek nebo laryngitidy, léčené antibiotiky. Brala jsem také léky na potlačování plísní, které mně napadaly na různých částech těla (nehty, kůže i ústní dutina), a držela jsem přísnou dietu (zákaz cukru, pečiva z kvásku, plísňových sýrů, piva a pod). Proto jsem se upínala s nadějí na zlepšení mého zdravotního stavu po zahájení léčby „probiotiky na míru“, o které jsem se dočetla v denním tisku.</p>
+              <p>Jak vyplývá z výše uvedeného textu, můj zdravotní stav ještě loni na podzim nebyl vůbec dobrý. Po té co od ledna 2018 beru Vámi zaslané léky, jsem však nebyla do dnešního dne vůbec nemocná, neměla jsem ani rýmu, ačkoliv v Praze proběhla vleklá chřipková epidemie, které neodolal ani můj manžel. Stav mých bílých krvinek stoupl, je v normě a moje léčba na imunologii byla ukončena. Dobře spím, chutná mi jíst (až moc) a mám pořád dobrou náladu. Také se mi upravila stolice a je nyní pravidelná a bez problémů. Jediné, co se mi nedaří, je zhubnout, což má asi tu hlavní příčinu, že teď jím víc než dřív, protože mi všechno víc chutná J</p>
+              <p><strong>Z Vaší terapie jsem nadšená a ráda v ní budu pokračovat i nadále. Tímto Vám moc děkuji !!!</strong></p>
             </div>
+            <div class="autor">Vaše vděčná klienta</div>
           </div>
+        </div>
 
-          <div class="col-sm-4">
-            <div class="nazor">
-              <img src="img/photo.jpg" alt="MUDr. Ignác Menděl">
-
-              <h3>ZÁKAZNÍK 3</h3>
-
-              <p>Lorem ipsum dolor sit amet, consectetur
-              adipisici elit, sed eiusmod tempor incidunt
-              adipisici elit, sed eiusmod tempor incidunt
-              ut labore et dolore magna aliqua.</p>
-
-              <p><strong>MUDr. Ignác Menděl</strong></p>
-            </div>
-          </div>
-        </div>        
       </div>
+
+      <a class="btn btn-default btn-lg btn-block" href="zkusenosti-zakazniku.htm">Další zkušenosti zakazníků</a>
+
     </div>
   </section>
 
